fix: add host functions to pallet and runtime

--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -31,6 +31,7 @@ sp-runtime = { workspace = true, default-features = false }
 chainbridge = {path = "../chainbridge", default-features = false}
 asset-handler = {path = "../asset-handler", default-features = false}
 polkadex-primitives = { workspace = true, default-features = false }
+thea-primitives = {path = "../../thea-primitives", default-features = false}
 
 
 [features]
