--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -104,6 +104,7 @@ pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false }
 
 # Thea
 thea = {path = "../pallets/thea", default-features = false }
+thea-primitives = { path = "../thea-primitives", default-features = false  }
 
 # Try Runtime
 frame-try-runtime = { workspace = true, optional = true, default-features = false }
