fix: tests for approve deposit extrinsic

--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -33,6 +33,10 @@ asset-handler = {path = "../asset-handler", default-features = false}
 polkadex-primitives = { workspace = true, default-features = false }
 thea-primitives = {path = "../../thea-primitives", default-features = false}
 
+[dev-dependencies]
+blst = {version = "0.3.10"}
+sp-application-crypto = { workspace = true }
+sp-keystore = { workspace = true }
 
 [features]
 default = ["std"]
