--- a/pallets/rewards/Cargo.toml
+++ b/pallets/rewards/Cargo.toml
@@ -20,14 +20,12 @@ sp-runtime = { default-features = false, workspace = true }
 sp-std = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
 polkadex-primitives = { workspace = true, default-features = false }
-ias-verify = { workspace = true, default-features = false }
 rust_decimal = { workspace = true, features = ["scale-codec"], default-features = false }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
-test-utils = { workspace = true, default-features = false, optional = true }
 pallet-timestamp = { workspace = true, default-features = false }
+once_cell = { version = "1.17.0", default-features = false }
 
 [dev-dependencies]
-test-utils = { workspace = true }
 pallet-assets = { workspace = true, features = ["std"] }
 pallet-balances = { workspace = true, features = ["std"] }
 sp-application-crypto = { workspace = true }
@@ -48,7 +46,6 @@ std = [
     "sp-std/std",
     "sp-core/std",
     "polkadex-primitives/std",
-    "ias-verify/std",
     "rust_decimal/std",
     "pallet-timestamp/std",
 ]
