--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "pallets/chainbridge",
     "pallets/asset-handler",
     "pallets/pdex-migration",
+    "pallets/assets-transaction-payment",
     "pallets/ocex",
 ]
 
