Basic transaction payment setup

--- a/pallets/assets-transaction-payment/Cargo.toml
+++ b/pallets/assets-transaction-payment/Cargo.toml
@@ -16,6 +16,8 @@ scale-info = { workspace = true, default-features = false, features = ["derive"]
 frame-support = { workspace = true, default-features = false }
 frame-benchmarking = { workspace = true, default-features = false,  optional = true }
 frame-system = { workspace = true, default-features = false }
+pallet-balances = { workspace = true, default-features = false }
+pallet-assets = { workspace = true, default-features = false }
 
 sp-io = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
@@ -33,6 +35,8 @@ std = [
 	"sp-core/std",
 	"sp-std/std",
 	"sp-runtime/std",
+	"pallet-balances/std",
+	"pallet-assets/std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
