--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -98,6 +98,7 @@ polkadex-primitives = { workspace = true, default-features = false }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
 asset-handler = { path = "../pallets/asset-handler", default-features = false }
 chainbridge = { path ="../pallets/chainbridge", default-features = false }
+assets-transaction-payment = {path="../pallets/assets-transaction-payment", default-features = false}
 
 # Orderbook 
 pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false }
@@ -179,7 +180,8 @@ std = [
     "chainbridge/std",
     "pallet-ocex-lmp/std",
     "frame-try-runtime/std",
-    "pallet-asset-handler-runtime-api/std"
+    "pallet-asset-handler-runtime-api/std",
+    "assets-transaction-payment/std"
 ]
 runtime-benchmarks = [
     #theirs
