--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -32,6 +32,7 @@ chainbridge = {path = "../chainbridge", default-features = false}
 asset-handler = {path = "../asset-handler", default-features = false}
 polkadex-primitives = { workspace = true, default-features = false }
 thea-primitives = {path = "../../thea-primitives", default-features = false}
+thea-staking = {path = "../thea-staking", default-features = false}
 
 [dev-dependencies]
 blst = {version = "0.3.10"}
@@ -55,7 +56,8 @@ std = [
     "chainbridge/std",
     "asset-handler/std",
     "polkadex-primitives/std",
-    "thea-primitives/std"
+    "thea-primitives/std",
+    "thea-staking/std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
