--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -108,6 +108,9 @@ pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false }
 thea = {path = "../pallets/thea", default-features = false }
 thea-primitives = { path = "../thea-primitives", default-features = false  }
 
+# Liquidity Pallet
+liquidity = { path = "../pallets/liquidity", default-features = false }
+
 # Try Runtime
 frame-try-runtime = { workspace = true, optional = true, default-features = false }
 
@@ -190,6 +193,7 @@ std = [
     "pallet-nomination-pools/std",
     "pallet-asset-handler-runtime-api/std",
     "thea/std",
+    "liquidity/std",
 ]
 runtime-benchmarks = [
     #theirs
