--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -32,6 +32,7 @@ chainbridge = {path = "../chainbridge", default-features = false}
 asset-handler = {path = "../asset-handler", default-features = false}
 polkadex-primitives = { workspace = true, default-features = false }
 thea-primitives = {path = "../../thea-primitives", default-features = false}
+thea-staking = { path = "../thea-staking", default-features = false }
 
 xcm = { workspace = true, default-features = false }
 
@@ -58,7 +59,8 @@ std = [
     "asset-handler/std",
     "polkadex-primitives/std",
     "thea-primitives/std",
-    "xcm/std"
+    "xcm/std",
+    "thea-staking/std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
