--- a/pallets/liquidity/Cargo.toml
+++ b/pallets/liquidity/Cargo.toml
@@ -29,6 +29,8 @@ sp-keystore = { workspace = true }
 frame-benchmarking = { workspace = true }
 anyhow = { workspace = true }
 sp-io = { workspace = true }
+pallet-ocex-lmp = { path = "../ocex", default-features = false }
+
 
 [features]
 default = ["std"]
@@ -42,4 +44,5 @@ std = [
     "sp-core/std",
     "polkadex-primitives/std",
     "pallet-timestamp/std",
+    "pallet-ocex-lmp/std",
 ]
