--- a/pallets/rewards/Cargo.toml
+++ b/pallets/rewards/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rewards"
+name = "pallet-rewards"
 version = "1.0.0"
 edition = "2021"
 authors = ["Polkadex Authors"]
@@ -19,7 +19,6 @@ sp-runtime = { default-features = false, workspace = true }
 sp-std = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
 polkadex-primitives = { workspace = true, default-features = false }
-frame-benchmarking = { workspace = true, default-features = false, optional = true }
 pallet-timestamp = { workspace = true, default-features = false }
 once_cell = { version = "1.17.0", default-features = false }
 
@@ -28,7 +27,6 @@ pallet-assets = { workspace = true, features = ["std"] }
 pallet-balances = { workspace = true, features = ["std"] }
 sp-application-crypto = { workspace = true }
 sp-keystore = { workspace = true }
-frame-benchmarking = { workspace = true }
 anyhow = { workspace = true }
 sp-io = { workspace = true }
 
