--- a/pallets/liquidity/Cargo.toml
+++ b/pallets/liquidity/Cargo.toml
@@ -20,8 +20,10 @@ sp-core = { workspace = true, default-features = false }
 polkadex-primitives = { workspace = true, default-features = false }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 pallet-timestamp = { workspace = true, default-features = false }
+test-utils = { workspace = true, default-features = false, optional = true }
 
 [dev-dependencies]
+test-utils = { workspace = true }
 pallet-assets = { workspace = true, features = ["std"] }
 pallet-balances = { workspace = true, features = ["std"] }
 sp-application-crypto = { workspace = true }
@@ -46,3 +48,11 @@ std = [
     "pallet-timestamp/std",
     "pallet-ocex-lmp/std",
 ]
+runtime-benchmarks = [
+    "sp-runtime/runtime-benchmarks",
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "test-utils"
+]
+try-runtime = ["frame-support/try-runtime"]
