--- a/pallets/rewards/Cargo.toml
+++ b/pallets/rewards/Cargo.toml
@@ -21,6 +21,8 @@ sp-core = { workspace = true, default-features = false }
 polkadex-primitives = { workspace = true, default-features = false }
 pallet-timestamp = { workspace = true, default-features = false }
 once_cell = { version = "1.17.0", default-features = false }
+frame-benchmarking = { workspace = true, default-features = false, optional = true }
+test-utils = { workspace = true, default-features = false, optional = true }
 
 [dev-dependencies]
 pallet-assets = { workspace = true, features = ["std"] }
@@ -29,6 +31,8 @@ sp-application-crypto = { workspace = true }
 sp-keystore = { workspace = true }
 anyhow = { workspace = true }
 sp-io = { workspace = true }
+frame-benchmarking = { workspace = true }
+test-utils = { workspace = true }
 
 [features]
 default = ["std"]
@@ -43,3 +47,12 @@ std = [
     "polkadex-primitives/std",
     "pallet-timestamp/std",
 ]
+
+runtime-benchmarks = [
+    "sp-runtime/runtime-benchmarks",
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "test-utils"
+]
+try-runtime = ["frame-support/try-runtime"]
