--- a/thea-primitives/Cargo.toml
+++ b/thea-primitives/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 blst = {version = "0.3.10", default-features = false, optional=true}
 frame-system = { workspace = true, default-features = false }
+frame-support = { default-features = false, workspace = true }
 polkadex-primitives = {workspace = true, default-features = false}
 sp-std = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
@@ -26,4 +27,10 @@ std = [
     "parity-scale-codec/std",
     "scale-info/std",
     "sp-core/std",
+    "frame-support/std",
 ]
+runtime-benchmarks = [
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+]
+try-runtime = ["frame-support/try-runtime"]
