--- a/pallets/assets-transaction-payment/Cargo.toml
+++ b/pallets/assets-transaction-payment/Cargo.toml
@@ -19,11 +19,17 @@ frame-system = { workspace = true, default-features = false }
 pallet-balances = { workspace = true, default-features = false }
 pallet-assets = { workspace = true, default-features = false }
 pallet-transaction-payment = { workspace = true, default-features = false }
+polkadex-primitives = { workspace = true, default-features = false }
+pallet-timestamp = { workspace = true, default-features = false }
+test-utils = { workspace = true, default-features = false, optional = true }
 
 sp-io = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
 sp-std = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
+
+[dev-dependencies]
+sp-application-crypto = { workspace = true }
 
 [features]
 default = ["std"]
@@ -38,12 +44,8 @@ std = [
 	"sp-runtime/std",
 	"pallet-balances/std",
 	"pallet-assets/std",
-	"pallet-transaction-payment/std"
+	"pallet-transaction-payment/std",
+	"polkadex-primitives/std",
+	"pallet-timestamp/std",
+	"test-utils/std"
 ]
-runtime-benchmarks = [
-    "frame-benchmarking/runtime-benchmarks",
-    "frame-support/runtime-benchmarks",
-    "frame-system/runtime-benchmarks",
-    "sp-runtime/runtime-benchmarks",
-]
-try-runtime = ["frame-support/try-runtime"]
