--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,3 +10,4 @@ sc-executor = { workspace = true }
 node-polkadex-runtime = { path = "../runtime", version = "4.0.0" }
 frame-benchmarking = { workspace = true }
 thea-primitives = {path = "../thea-primitives"}
+polkadex-extrinsic = {path = "../polkadex-extrinsic"}
