--- a/pallets/asset-handler/Cargo.toml
+++ b/pallets/asset-handler/Cargo.toml
@@ -17,9 +17,6 @@ frame-support = { workspace = true, default-features = false }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-system = { workspace = true, default-features = false }
 
-pallet-balances = { workspace = true, default-features = false }
-pallet-sudo = { workspace = true, default-features = false }
-pallet-assets = { workspace = true, default-features = false }
 
 sp-io = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
@@ -32,6 +29,11 @@ chainbridge = { path = "../chainbridge", default-features = false }
 
 thea-primitives = { path = "../../thea-primitives", default-features = false }
 
+[dev-dependencies]
+pallet-assets = { workspace = true }
+pallet-balances = { workspace = true }
+pallet-sudo = { workspace = true }
+
 
 [features]
 default = ["std"]
@@ -40,9 +42,6 @@ std = [
 	"scale-info/std",
 	"frame-support/std",
 	"frame-system/std",
-	"pallet-balances/std",
-	"pallet-sudo/std",
-	"pallet-assets/std",
 	"sp-io/std",
 	"sp-core/std",
 	"sp-std/std",
