--- a/pallets/thea-cross-chain-governance/Cargo.toml
+++ b/pallets/thea-cross-chain-governance/Cargo.toml
@@ -7,36 +7,29 @@ edition = "2021"
 
 [dependencies]
 parity-scale-codec = { workspace = true, default-features = false }
-log = { workspace = true, default-features = false }
 scale-info =  { workspace = true, default-features = false, features = ["derive"] }
-frame-benchmarking = { default-features = false, workspace = true , optional = true }
 frame-support = { default-features = false, workspace = true }
 frame-system ={ default-features = false, workspace = true }
 pallet-balances = { default-features = false, workspace = true }
-sp-io = { default-features = false, workspace = true }
 sp-runtime = { default-features = false, workspace = true }
 sp-std = { default-features = false, workspace = true }
-sp-staking = { default-features = false, workspace = true }
 polkadex-primitives = { workspace = true, default-features = false }
 pallet-identity = { default-features = false, workspace = true }
 
 [dev-dependencies]
 sp-core = { default-features = false, workspace = true }
+sp-io = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
     "parity-scale-codec/std",
-    "log/std",
     "scale-info/std",
-    "frame-benchmarking/default",
     "frame-support/default",
     "frame-system/default",
     "pallet-balances/default",
-    "sp-io/default",
     "sp-runtime/default",
     "sp-std/default",
-    "sp-staking/default",
     "sp-core/default",
     "pallet-balances/std",
     "polkadex-primitives/std",
