--- a/pallets/thea-staking/Cargo.toml
+++ b/pallets/thea-staking/Cargo.toml
@@ -16,7 +16,6 @@ targets = ["x86_64-unknown-linux-gnu"]
 parity-scale-codec = {workspace = true, default-features = false }
 log = { workspace = true, default-features = false }
 scale-info =  { workspace = true, default-features = false, features = ["derive"] }
-frame-benchmarking = { default-features = false, workspace = true , optional = true}
 frame-support = { default-features = false, workspace = true }
 frame-system ={ default-features = false, workspace = true }
 pallet-balances = { default-features = false, workspace = true }
@@ -26,12 +25,12 @@ sp-staking = { default-features = false, workspace = true }
 thea-primitives = { path = "../../thea-primitives", default-features = false }
 
 [dev-dependencies]
+frame-benchmarking = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
 	"parity-scale-codec/std",
-	"frame-benchmarking?/std",
 	"frame-support/std",
 	"frame-system/std",
 	"log/std",
