--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,8 @@ jobs:
       - name: Install latest nightly with wasm target
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
+          # TODO [Issuer #654]: unpin version when issue will be resolved.
+          toolchain: nightly-2023-02-21
           target: wasm32-unknown-unknown
           default: true
           components: rustfmt, clippy
@@ -73,8 +74,6 @@ jobs:
           rustup -V
           cargo fmt -- --version
           cargo clippy -V
-      - name: Check Clippy
-        run: cargo clippy -- -D warnings
       - name: Build Project
         run: |
           cargo clean
@@ -82,6 +81,8 @@ jobs:
           RUSTFLAGS="-D warnings" cargo build
       - name: Check Formatting
         run: cargo fmt --check
+      - name: Check Clippy
+        run: cargo clippy -- -D warnings
       - name: Test Project
         run: cargo test
       - name: Run Cargo Trampulin
