Revert "fixed ci"
This reverts commit da67f8bee9b18ad9c8e60819da950e58dcc50e1e.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,7 @@ jobs:
       - name: Install latest nightly with wasm target
         uses: actions-rs/toolchain@v1
         with:
-          # TODO [Issuer #654]: unpin version when issue will be resolved.
-          toolchain: nightly-2023-02-21
+          toolchain: nightly
           target: wasm32-unknown-unknown
           default: true
           components: rustfmt, clippy
@@ -74,6 +73,8 @@ jobs:
           rustup -V
           cargo fmt -- --version
           cargo clippy -V
+      - name: Check Clippy
+        run: cargo clippy -- -D warnings
       - name: Build Project
         run: |
           cargo clean
@@ -81,8 +82,6 @@ jobs:
           RUSTFLAGS="-D warnings" cargo build
       - name: Check Formatting
         run: cargo fmt --check
-      - name: Check Clippy
-        run: cargo clippy -- -D warnings
       - name: Test Project
         run: cargo test
       - name: Run Cargo Trampulin
