Boiler plate done.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "node",
     "runtime",
     "clients/orderbook",
+    "clients/orderbook/rpc",
     "pallets/pdex-migration",
     "pallets/chainbridge",
     "pallets/asset-handler",
