--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -34,6 +34,8 @@ node-polkadex-runtime = { path = "../runtime", version = "4.0.0" }
 pallet-asset-handler-rpc = {path = "../pallets/asset-handler/rpc"}
 polkadex-client = { path = "../client"}
 orderbook = {path = "../clients/orderbook"}
+orderbook-primitives = {path="../primitives/orderbook"}
+orderbook-rpc = {path="../clients/orderbook/rpc"}
 
 # Substrate dependencies
 thea-primitives = {path = "../thea-primitives"}
