--- a/primitives/orderbook/Cargo.toml
+++ b/primitives/orderbook/Cargo.toml
@@ -6,17 +6,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-parity-scale-codec = { workspace = true, default-features = false }
-scale-info = { workspace = true, default-features = false }
-sp-api = { workspace = true, default-features = false }
-sp-application-crypto = { workspace = true, default-features = false }
-sp-core = { workspace = true, default-features = false }
-sp-runtime = { workspace = true, default-features = false }
-sp-std = { workspace = true, default-features = false }
-polkadex-primitives = { workspace = true, default-features = false }
+parity-scale-codec = { workspace = true }
+scale-info = { workspace = true }
+sp-api = { workspace = true }
+sp-application-crypto = { workspace = true }
+sp-core = { workspace = true }
+sp-runtime = { workspace = true }
+sp-std = { workspace = true }
+polkadex-primitives = { workspace = true }
 serde = { version = "1.0.152", optional = true, default-features = false}
 anyhow = { version = "1.0.69", default-features = false }
 rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"], default-features = false }
+
+
+[dev-dependencies]
+serde_json = "1.0.94"
 
 [features]
 default = ["std"]
