--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -12,14 +12,24 @@ futures = "0.3"
 thiserror = "1.0.39"
 parking_lot = "0.12.1"
 serde = "1.0.152"
-orderbook-primitives = {path ="../../primitives/orderbook"}
-rust_decimal = {git ="https://github.com/Polkadex-Substrate/rust-decimal.git", branch="master", features = ["scale-codec"]}
-prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28"  }
-parity-scale-codec = {  version = "3.2.2", features = ["derive"] }
+
+# Database stuff
+parity-db = "0.4.4"
+hash-db = { version = "0.15.2" }
+memory-db = { version = "0.29.0" }
+trie-db = { version = "0.23.1" }
+trie-root = { version = "0.17.0" }
+
+
+
+orderbook-primitives = { path = "../../primitives/orderbook" }
+rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"] }
+prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+parity-scale-codec = { version = "3.2.2", features = ["derive"] }
 sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
-sc-network ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
@@ -31,3 +41,6 @@ sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "pol
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+
+
