--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -6,19 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hash256-std-hasher = { version = "0.15.2", default-features = false }
 hex = "0.4.2"
 log = "0.4"
 futures = "0.3"
 thiserror = "1.0.39"
 parking_lot = "0.12.1"
 serde = "1.0.152"
+serde_json = "1.0.94"
 
 # Database stuff
-parity-db = "0.4.4"
-hash-db = { version = "0.15.2" }
-memory-db = { version = "0.29.0" }
-trie-db = { version = "0.23.1" }
-trie-root = { version = "0.17.0" }
+hash-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master" }
+memory-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
+trie-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
+
 
 
 
