--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -26,6 +26,7 @@ test-utils = { workspace = true, default-features = false, optional = true }
 pallet-timestamp = { workspace = true, default-features = false }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 sp-core = { workspace = true, default-features = false, optional = true }
+liquidity = { path = "../liquidity", default-features = false }
 
 [dev-dependencies]
 test-utils = { workspace = true }
@@ -48,12 +49,16 @@ std = [
     "ias-verify/std",
     "rust_decimal/std",
     "pallet-timestamp/std",
+    "liquidity/std",
+
 ]
 runtime-benchmarks = [
     "sp-runtime/runtime-benchmarks",
     "frame-benchmarking/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
-    "test-utils"
+    "test-utils",
+    "liquidity/runtime-benchmarks",
+
 ]
 try-runtime = ["frame-support/try-runtime"]
