--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -108,6 +108,8 @@ thea = {path = "../pallets/thea", default-features = false }
 # Liquidity Pallet
 liquidity = { path = "../pallets/liquidity", default-features = false }
 
+# Parachain Rewards
+pallet-rewards = { path = "../pallets/rewards", default-features = false }
 # Try Runtime
 frame-try-runtime = { workspace = true, optional = true, default-features = false }
 
@@ -185,7 +187,10 @@ std = [
     "pallet-nomination-pools/std",
     "pallet-asset-handler-runtime-api/std",
     "thea/std",
-    "thea-cross-chain-governance/std"
+    "thea-cross-chain-governance/std",
+    "liquidity/std",
+    "pallet-rewards/std"
+
 ]
 runtime-benchmarks = [
     #theirs
@@ -199,6 +204,8 @@ runtime-benchmarks = [
     "pallet-ocex-lmp/runtime-benchmarks",
     "asset-handler/runtime-benchmarks",
     "pdex-migration/runtime-benchmarks",
+    "pallet-rewards/runtime-benchmarks",
+    "liquidity/runtime-benchmarks",
 ]
 try-runtime = [
     "frame-executive/try-runtime",
@@ -229,4 +236,6 @@ try-runtime = [
     "pallet-utility/try-runtime",
     "orml-vesting/try-runtime",
     "pdex-migration/try-runtime",
+    "pallet-rewards/try-runtime",
+    "liquidity/try-runtime",
 ]
