--- a/pallets/thea-staking/Cargo.toml
+++ b/pallets/thea-staking/Cargo.toml
@@ -29,6 +29,12 @@ thea-primitives = { path = "../../thea-primitives", default-features = false }
 
 [dev-dependencies]
 frame-benchmarking = { workspace = true }
+sp-core = { default-features = false, workspace = true }
+pallet-staking-reward-curve = { workspace = true }
+pallet-staking = { default-features = false, workspace = true }
+pallet-assets = { workspace = true, default-features = false }
+chainbridge = { path = "../chainbridge", default-features = false }
+asset-handler = { path = "../asset-handler", default-features = false }
 
 [features]
 default = ["std"]
